fixed audio icon z-index

--- a/renderer/styles/horizontal_and_vertical.css
+++ b/renderer/styles/horizontal_and_vertical.css
@@ -56,7 +56,6 @@
     right: 0;
     margin: auto;
     width: 20%;
-    z-index: 1;
     border-radius: 50%;
 }
 
